# snake-game

./: .gitignore  CMakeLists.txt  README.md  build-cmake.bat  build.bat  delcache.bat  run.bat
src/: Config.h  Main.cpp
src/Core/: Application.cpp  Application.h  Console.cpp  Console.h  Logger.h  Machine.h
src/Snake/: Snake.cpp  Snake.h
